<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basketball"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_team_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/score_team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="56sp" />

        <Button
            android:id="@+id/plus2_teamA_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B54213"
            android:text="@string/point1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus3_teamA_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#B54213"
            android:text="@string/point2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/free_teamA_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#B54213"
            android:text="@string/free_throw"
            android:textSize="24sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_team_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/layout_team_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_team_a">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/score_team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="56sp" />

        <Button
            android:id="@+id/plus2_teamB_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B54213"
            android:text="@string/point1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus3_teamB_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#B54213"
            android:text="@string/point2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/free_teamB_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#B54213"
            android:text="@string/free_throw"
            android:textSize="24sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/end_game_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#D32F2F"
        android:text="@string/end_game"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_team_a" />

    <TextView
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#7F000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="#D32F2F"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_game_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>